<resources>
    <string name="test">
  最近忙完了学校的事情，终于又成功的跑去公司上班了(还好公司没有嫌弃我菜😂😂)。在学校废了半年多，感觉好多东西都不太会了，所以觉得自己应该找点事情来做，于是选中学习CoordinatorLayout。其实在昨年，我就对CoordinatorLayout进行了简单的学习，不过当时学习的重点放在了嵌套滑动，从而未对CoordinatorLayout进行深入和系统的学习，这个也算是昨年留下的一个遗憾。因此，我觉得还是应该弥补一下。
  楼主写一个系列文章来详细的介绍CoordinatorLayout，分别会介绍它的基本使用，Behavior的原理解析以及自定义，最后就是CoordinatorLayout的扩展，这部分的内容不固定，篇幅也不固定。
CoordinatorLayout使用详解: 打造折叠悬浮效果
1. 概述
  作为本系列文章第一篇文章，我觉得还是有必要简单介绍一下CoordinatorLayout。
  CoordinatorLayout顾名思义，协调者布局。所谓的协调者布局，它主要是协调谁，协调啥呢？我相信大家在学这个布局时，都会思考这两个问题。其实说的简单点，协调者布局主要协调child之间的联动。请注意我的措辞，child之间的联动。
  可能有的同学对联动还是有点陌生，我简单的举一个例子，比如说，我们在滑动一个RecyclerView,存在一个View需要在RecyclerView滑动时做相应的动作，例如，位移变化，缩放变化等等。我相信这种场景还是非常常见的吧。这种场景就可以称之为child之间联动。
  而CoordinatorLayout是怎么进行协调呢？主要依靠一个插件--Behavior。在CoordinatorLayout内部，每个child都必须带一个Behavior（其实不携带也行，不携带就不能被协调），CoordinatorLayout就根据每个child所携带的Behavior信息进行协调。
  这里还需要提一句的是，Behavior不仅仅协助联动，而且还是接管了child的三大流程，有点类似于RecyclerView的LayoutManager。
  而Behavior是怎么进行协助联动呢？这就涉及到嵌套滑动的相关知识，总的来说，Behavior包括整个CoordinatorLayout体系就是对嵌套滑动的应用和实现。所以，我们便知道了，嵌套滑动到底有多么重要了。
  本文主要介绍CoordinatorLayout的基本使用，主要是介绍CoordinatorLayout与AppBarLayout的搭配使用。

2. AppBarLayout
  如果我们想要实现折叠的ActionBar效果，在CoordinatorLayout中，AppBarLayout绝对是作为首选的控件。
  在正式介绍AppBarLayout的使用时，我们先来看看几个Flag，这几个Flag在AppBarLayout里面非常的重要。

  这里需要几点，如下：

我在AppBarLayout里面放了两个View，其中一个设置scrollFlags，一个没有设置。没有设置的是不会折叠的。
在这里，AppBarLayout并没有设置Behavior,而RecyclerView却设置了的。我统一的解释一下，在CoordinatorLayout内部，理论上每个View必须携带一个Behavior,而这里AppBarLayout没有携带是因为它本身就有，所以不需要申明(在后面，我们会看到几种设置Behavior的方式，这里买一个关子。)
  然后，我们来看看效果：



  这里，我不再介绍其他Flag的效果，有兴趣可以尝试一下。

3. CollapsingToolbarLayout
  接下来，我们再来看一下CollapsingToolbarLayout。CollapsingToolbarLayout主要是实现折叠布局的，我们来看看是怎么使用的。首先，我们来看看CollapsingToolbarLayout的几个Flag：

名称	值	作用
COLLAPSE_MODE_OFF	0	默认值，表示View不会有任何属性
COLLAPSE_MODE_PIN	1	当CollapsingToolbarLayout完全收缩之后，设置该Flag的View会保留在屏幕当中。
COLLAPSE_MODE_PARALLAX	2	设置该Flag的View会跟内容滚动，可以通过setParallaxMultiplier方法来设置视图差比率，其中0表示毫无视图差，完全跟内容滚动同步；1表示View完全不动。默认的视图差为0.5。
  接下来我们看一个Demo：

  使用CollapsingToolbarLayout时，我们需要注意的是：CollapsingToolbarLayout需要作为AppBarLayout子View。然后我们来看看相关的效果：

4. 总结
  本文主要介绍CoordinatorLayout的基本使用，还是非常简单的，但是我们从上面的代码看出，好像根本就没有介绍它。CoordinatorLayout作为协调者，肯定是非常重要的，具体介绍在后续的文章会详细的分析。在这里先对本文做一个简单的总结。
使用AppBarLayout时，我们需要注意4种flag的不同点。
CollapsingToolbarLayout需要作为AppBarLayout的子View才会有效，同时还需要注意它的3种flag。
  如果不出意外的话，下一篇文章我们将分析RecyclerView和AppBarLayout的联动。
</string>
    <string name="app_name">面试通</string>
    <string name="customview_title_default">标题</string>
    <string name="login_accountHint">请输入11位手机号码</string>
    <string name="login_registerLink">注册</string>
    <string name="login_verificationCode">验证码登录</string>
    <string name="contentDescription">TODO</string>
    <string name="login_title">LOGIN</string>
    <string name="login_pswHint">请输入密码</string>
    <string name="login_btnLogin">登录</string>
    <string name="login_tvForgot">忘记密码？</string>
    <string name="register_title">REGISTER</string>
    <string name="register_accountHint">请输入11位手机号</string>
    <string name="register_pswHint">请输入6~16位密码</string>
    <string name="register_pswConfirmHint">请确认密码</string>
    <string name="register_btnRegister">注册</string>
    <string name="menu_navigation_home">首页</string>
    <string name="menu_navigation_more">分类</string>
    <string name="menu_navigation_customize">题目</string>
    <string name="menu_navigation_my">我的</string>
    <string name="mq_title">标题</string>
    <string name="mq_category">门类</string>
    <string name="mq_subject">学科</string>
    <string name="mq_major">专业</string>
    <string name="philosophy">哲学</string>
    <string name="economics">经济学</string>
    <string name="law">法学</string>
    <string name="education">教育学</string>
    <string name="history">历史学</string>
    <string name="literature">文学</string>
    <string name="lixue">理学</string>
    <string name="engineering">工学</string>
    <string name="agronomy">农学</string>
    <string name="medical">医学</string>
    <string name="management">管理学</string>
    <string name="military">军事学</string>
    <string name="art">艺术学</string>
    <string-array name="category_science">
        <item>哲学</item>
        <item>经济学</item>
        <item>法学</item>
        <item>教育学</item>
        <item>历史学</item>
        <item>文学</item>
        <item>理学</item>
        <item>工学</item>
        <item>农学</item>
        <item>医学</item>
        <item>管理学</item>
        <item>军事学</item>
        <item>艺术学</item>
    </string-array>
    <string-array name="category_speciality">
        <item>经济学</item>
        <item>法学</item>
        <item>教育学</item>
        <item>历史学</item>
        <item>文学</item>
        <item>工学</item>
        <item>农学</item>
        <item>医学</item>
        <item>管理学</item>
        <item>军事学</item>
        <item>艺术学</item>
    </string-array>
    <string-array name="x_philosophy">
        <item>哲学</item>
    </string-array>
    <string-array name="x_economics">
        <item>理论经济学</item>
        <item>应用经济学</item>
        <item>统计学</item>
    </string-array>
    <string-array name="x_law">
        <item>法学</item>
        <item>政治学</item>
        <item>社会学</item>
        <item>民族学</item>
        <item>马克思主义理论</item>
        <item>公安学</item>
    </string-array>
    <string-array name="x_education">
        <item>教育学</item>
        <item>心理学</item>
        <item>体育学</item>
    </string-array>
    <string-array name="x_history">
        <item>考古学</item>
        <item>中国史</item>
        <item>世界史</item>
    </string-array>
    <string-array name="x_literature">
        <item>中国语言文学</item>
        <item>外国语言文学</item>
        <item>新闻传播学</item>
    </string-array>
    <string-array name="x_lixue">
        <item>数学</item>
        <item>物理学</item>
        <item>化学</item>
        <item>天文学</item>
        <item>地理学</item>
        <item>大气科学</item>
        <item>海洋科学</item>
        <item>地球物理学</item>
        <item>地质学</item>
        <item>生物学</item>
        <item>系统科学</item>
        <item>科学技术史</item>
        <item>生态学</item>
        <item>统计学</item>
        <item>心理学</item>
        <item>力学</item>
        <item>材料科学与工程</item>
        <item>电子科学与技术</item>
        <item>计算机科学与技术</item>
        <item>环境科学与工程</item>
        <item>生物医学工程</item>
        <item>基础医学</item>
        <item>公共卫生与预防医学</item>
        <item>药学</item>
        <item>中药学</item>
        <item>医学技术</item>
        <item>护理学</item>
    </string-array>
    <string-array name="x_engineering">
        <item>力学</item>
        <item>机械工程</item>
        <item>光学工程</item>
        <item>仪器科学与技术</item>
        <item>材料科学与工程</item>
        <item>冶金工程</item>
        <item>动力工程及工程热物理</item>
        <item>电气工程</item>
        <item>电子科学与技术</item>
        <item>信息与通信工程</item>
        <item>控制科学与工程</item>
        <item>计算机科学与技术</item>
        <item>建筑学</item>
        <item>土木工程</item>
        <item>水利工程</item>
        <item>测绘科学与技术</item>
        <item>化学工程与技术</item>
        <item>地质资源与地质工程</item>
        <item>矿业工程</item>
        <item>石油与天然气工程</item>
        <item>纺织科学与工程</item>
        <item>轻工技术与工程</item>
        <item>交通运输工程</item>
        <item>船舶与海洋工程 </item>
        <item>航空宇航科学与技术</item>
        <item>兵器科学与技术</item>
        <item>核科学与技术</item>
        <item>农业工程</item>
        <item>林业工程</item>
        <item>环境科学与工程</item>
        <item>生物医学工程</item>
        <item>食品科学与工程</item>
        <item>城乡规划学</item>
        <item>风景园林学</item>
        <item>软件工程</item>
        <item>生物工程</item>
        <item>安全科学与工程</item>
        <item>公安技术</item>
        <item>网络空间安全</item>
        <item>科学技术史</item>
        <item>管理科学与工程</item>
        <item>设计学</item>
    </string-array>
    <string-array name="x_agronomy">
        <item>作物学</item>
        <item>园艺学</item>
        <item>农业资源与环境</item>
        <item>植物保护</item>
        <item>畜牧学</item>
        <item>兽医学</item>
        <item>林学</item>
        <item>水产</item>
        <item>草学</item>
        <item>科学技术史</item>
        <item>环境科学与工程</item>
        <item>食品科学与工程</item>
        <item>风景园林学</item>
    </string-array>
    <string-array name="x_medical">
        <item>基础医学</item>
        <item>临床医学</item>
        <item>口腔医学</item>
        <item>公共卫生与预防医学</item>
        <item>中医学</item>
        <item>中西医结合</item>
        <item>药学</item>
        <item>中药学</item>
        <item>特种医学</item>
        <item>医学技术</item>
        <item>护理学</item>
        <item>科学技术史</item>
        <item>生物医学工程</item>
    </string-array>
    <string-array name="x_management">
        <item>管理科学与工程</item>
        <item>工商管理</item>
        <item>农林经济管理</item>
        <item>公共管理</item>
        <item>图书情报与档案管理</item>
    </string-array>
    <string-array name="x_military">
        <item>军事思想及军事历史</item>
        <item>战略学</item>
        <item>战役学</item>
        <item>战术学</item>
        <item>军队指挥学</item>
        <item>军制学</item>
        <item>军队政治工作学</item>
        <item>军事后勤学</item>
        <item>军事装备学</item>
        <item>军事训练学</item>
    </string-array>
    <string-array name="x_art">
        <item>艺术学理论</item>
        <item>音乐与舞蹈学</item>
        <item>戏剧与影视学</item>
        <item>美术学</item>
        <item>设计学</item>
    </string-array>
    <string-array name="XPhilosophy">
        <item>哲学</item>
        <item>马克思主义哲学</item>
        <item>中国哲学</item>
        <item>外国哲学</item>
        <item>逻辑学</item>
        <item>伦理学</item>
        <item>美学</item>
        <item>宗教学</item>
        <item>科学技术哲学</item>
    </string-array>
    <string-array name="XTheoreticalEconomics">
        <item>理论经济学</item>
        <item>政治经济学</item>
        <item>经济思想史</item>
        <item>经济史</item>
        <item>西方经济学</item>
        <item>世界经济</item>
        <item>人口、资源与环境经济学</item>
    </string-array>
    <string-array name="XAppliedEconomics">
        <item>应用经济学</item>
        <item>国民经济学</item>
        <item>区域经济学</item>
        <item>财政学</item>
        <item>金融学</item>
        <item>产业经济学</item>
        <item>国际贸易学</item>
        <item>劳动经济学</item>
        <item>统计学</item>
        <item>数量经济学</item>
        <item>国防经济</item>
    </string-array>
    <string-array name="XStatistics">
        <item>统计学</item>
    </string-array>
    <string-array name="XLaw">
        
        <item>法学</item>
        <item>法学理论</item>
        <item>法律史</item>
        <item>宪法学与行政法学</item>
        <item>刑法学</item>
        <item>民商法学</item>
        <item>诉讼法学</item>
        <item>经济法学</item>
        <item>环境与资源保护法学</item>
        <item>国际法学</item>
        <item>军事法学</item>
    </string-array>
    <string-array name="XPoliticalScience">
        
        <item>政治学</item>
        <item>政治学理论</item>
        <item>中外政治制度</item>
        <item>科学社会主义与国际共产主义运动</item>
        <item>中共党史</item>
        <item>国际政治</item>
        <item>国际关系</item>
        <item>外交学</item>
    </string-array>
    <string-array name="XSociology">
        
        <item>社会学</item>
        <item>社会学</item>
        <item>人口学</item>
        <item>人类学</item>
        <item>民俗学</item>
    </string-array>
    <string-array name="XEthnology">
        
        <item>民族学</item>
        <item>马克思主义民族理论与政策</item>
        <item>中国少数民族经济</item>
        <item>中国少数民族史</item>
        <item>中国少数民族艺术</item>
    </string-array>
    <string-array name="XMarxistTheory">
        
        <item>马克思主义理论</item>
        <item>马克思主义基本原理</item>
        <item>马克思主义发展史</item>
        <item>马克思主义中国化研究</item>
        <item>国外马克思主义研究</item>
        <item>思想政治教育</item>
        <item>中国近现代史基本问题研究</item>
    </string-array>
    <string-array name="XPublicSecurity">
        <item>公安学</item>
    </string-array>
    <string-array name="XEducation">
        <item>教育学</item>
        <item>教育学原理</item>
        <item>课程与教学论</item>
        <item>教育史</item>
        <item>比较教育学</item>
        <item>学前教育学</item>
        <item>高等教育学</item>
        <item>成人教育学</item>
        <item>职业技术教育学</item>
        <item>特殊教育学</item>
        <item>教育技术学</item>
        <item>教育法学</item>
    </string-array>
</resources>