<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_education"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_education"
        android:gravity="center"
        android:text="@string/education"
        app:layout_constraintEnd_toStartOf="@id/tv_economics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_economics"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_economics"
        android:gravity="center"
        android:text="@string/economics"
        app:layout_constraintEnd_toStartOf="@id/tv_law"
        app:layout_constraintStart_toEndOf="@id/tv_education"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_law"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_law"
        android:gravity="center"
        android:text="@string/law"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_economics"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>