<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/tv_military"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_military"
        android:gravity="center"
        android:text="@string/military"
        app:layout_constraintEnd_toStartOf="@id/tv_engineering"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_engineering"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_engineering"
        android:gravity="center"
        android:text="@string/engineering"
        app:layout_constraintEnd_toStartOf="@id/tv_military"
        app:layout_constraintStart_toEndOf="@id/tv_agronomy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_agronomy"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:drawableTop="@mipmap/ic_science_agronomy"
        android:gravity="center"
        android:text="@string/agronomy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_engineering"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>