<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    tools:context=".ui.activity.login.LoginActivity">


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_registerLink"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_verificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_login_code"
        android:drawablePadding="10dp"
        android:text="@string/login_verificationCode"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/contentDescription"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_mid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_login_register_mid"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="#000"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/login_accountHint"
                android:background="@drawable/shape_login_register_et"
                android:drawableStart="@mipmap/ic_login_account"
                android:drawablePadding="10sp"
                android:hint="@string/login_accountHint"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#7E7E7E"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/et_psw"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/login_pswHint"
                android:background="@drawable/shape_login_register_et"
                android:drawableStart="@mipmap/ic_login_psw"
                android:drawablePadding="10sp"
                android:hint="@string/login_pswHint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#7E7E7E"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/selector_login_register_btn"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login_btnLogin"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_forgotPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/login_tvForgot"
                android:textColor="#000"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_mid">

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@mipmap/ic_login_wechat"
            android:contentDescription="@string/contentDescription" />

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@mipmap/ic_login_qq"
            android:contentDescription="@string/contentDescription" />

        <ImageView
            android:id="@+id/iv_weibo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@mipmap/ic_login_weibo"
            android:contentDescription="@string/contentDescription" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>